@@ -376,7 +376,7 @@ public class FlattenArrayElementTest {
                     .put("id", "PROD-789")
                     .put("quantity", 2));
 
-    List<Struct> productList = List.of(null, productElement2, productElement3);
+    List<Struct> productList = Arrays.asList(null, productElement2, productElement3);
 
     Struct productsWrapper = new Struct(schema.field("products").schema()).put("list", productList);
 
